[NNO-9307] Sandbox. Перевести все примеры на новое апи