@@ -178,13 +178,11 @@ public abstract class AbstractOpenPageCompiler<D extends Action, S extends N2oAb
             pageContext.getDatasources().addAll(Arrays.asList(source.getDatasources()));
         }
         if (source.getToolbars() != null)
-            pageContext.setToolbars(Arrays.asList(source.getToolbars()));
+            pageContext.setToolbars(new ArrayList<>(List.of(source.getToolbars())));
         if (source.getActions() != null)
             pageContext.setActions(Arrays.stream(source.getActions())
                     .collect(Collectors.toMap(ActionBar::getId, Function.identity())));
 
-        String parentWidgetId = initWidgetId(p);
-        pageContext.setParentWidgetId(parentWidgetId);
         pageContext.setParentClientWidgetId(currentClientWidgetId);
         String localDatasourceId = getLocalDatasourceId(p);
         pageContext.setParentLocalDatasourceId(localDatasourceId);
@@ -215,7 +213,7 @@ public abstract class AbstractOpenPageCompiler<D extends Action, S extends N2oAb
         p.addRoute(pageContext);
 
         if (source.getToolbars() != null)
-            pageContext.setToolbars(Arrays.asList(source.getToolbars()));
+            pageContext.setToolbars(new ArrayList<>(List.of(source.getToolbars())));
 
         return pageContext;
     }
@@ -418,23 +416,6 @@ public abstract class AbstractOpenPageCompiler<D extends Action, S extends N2oAb
         }
     }
 
-    /**
-     * Получение виджета действия (исходный)
-     */
-    private String initWidgetId(CompileProcessor p) {
-        ComponentScope componentScope = p.getScope(ComponentScope.class);
-        if (componentScope != null) {
-            WidgetIdAware widgetIdAware = componentScope.unwrap(WidgetIdAware.class);
-            if (widgetIdAware != null && widgetIdAware.getWidgetId() != null) {
-                return widgetIdAware.getWidgetId();
-            }
-        }
-        WidgetScope widgetScope = p.getScope(WidgetScope.class);
-        if (widgetScope != null)
-            return widgetScope.getWidgetId();
-        return null;
-    }
-
     protected void validatePathAndRoute(String route, N2oParam[] pathParams, ParentRouteScope routeScope) {
         List<String> routeParams = route == null ? null : RouteUtil.getParams(route);
         if ((routeParams == null || routeParams.isEmpty()) && (pathParams == null || pathParams.length == 0)) return;
@@ -457,7 +438,7 @@ public abstract class AbstractOpenPageCompiler<D extends Action, S extends N2oAb
      */
     @Deprecated
     protected void initToolbarBySubmitOperation(S source, PageContext context, CompileProcessor p) {
-        if (source.getSubmitOperationId() != null || SubmitActionType.copy.equals(source.getSubmitActionType())) {
+        if (source.getSubmitOperationId() != null && !source.getSubmitOperationId().isEmpty() || SubmitActionType.copy.equals(source.getSubmitActionType())) {
             N2oToolbar n2oToolbar = new N2oToolbar();
             if (context.getToolbars() == null) {
                 context.setToolbars(new ArrayList<>());
@@ -563,13 +544,16 @@ public abstract class AbstractOpenPageCompiler<D extends Action, S extends N2oAb
 
     protected String[] getRefreshDatasourceId(S source, CompileProcessor p) {
         if (source.getRefreshDatasourceIds() != null) return source.getRefreshDatasourceIds();
-        PageScope pageScope = p.getScope(PageScope.class);
-        if (pageScope != null) {
-            String parentWidgetId = initWidgetId(p);
-            String datasourceId = pageScope.getWidgetIdSourceDatasourceMap().get(parentWidgetId);
-            if (datasourceId != null)
-                return new String[]{datasourceId};
+        ComponentScope componentScope = p.getScope(ComponentScope.class);
+        if (componentScope != null) {
+            DatasourceIdAware datasourceIdAware = componentScope.unwrap(DatasourceIdAware.class);
+            if (datasourceIdAware != null && datasourceIdAware.getDatasourceId() != null) {
+                return new String[]{datasourceIdAware.getDatasourceId()};
+            }
         }
+        WidgetScope widgetScope = p.getScope(WidgetScope.class);
+        if (widgetScope != null && widgetScope.getDatasourceId() != null)
+            return new String[] {widgetScope.getWidgetId()};
         return null;
     }
 
